# gta-urban-analytics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DataSets.md  Durham_Shooting_and_Firearm_Discharge.csv  README.md  analyze_crime_data.py  crime_mapping.json  download_arcgis_hub_data.py  download_arcgis_paginated_experience_data.py  download_durham_data.py  download_durham_data.sh  download_halton_data.py  download_peel_data.py  download_toronto_data.py  download_toronto_data.sh  download_york_data.py  process_data.py  pyproject.toml  results_v01-walkthrough.md  unify_dataSetDownloads.py
docs/: DataSets.md  kepler-viz-plan.md  toronto-ytd-work.md
notebooks/: 01_extract.ipynb  02_transform.ipynb  02_transform_census.ipynb
results_v01/: all_10_anomaly_adjacent_summary.csv  all_1_incidents_by_municipality.csv  all_2_incidents_by_municipality_crime_type.csv  all_3_per_capita_rate.csv  all_4a_violent_crime_counts.csv  all_4b_violent_crime_per_1k.csv  all_5_property_vs_person.csv  all_6_yoy_change.csv  all_7_status_breakdown.csv  all_8_location_type.csv  all_9a_shootings.csv  all_9b_hate_crimes.csv  filtered_1_incidents_by_municipality.csv  filtered_2_incidents_by_municipality_crime_type.csv  filtered_3_per_capita_rate.csv  filtered_4a_violent_crime_counts.csv  filtered_4b_violent_crime_per_1k.csv  filtered_5_property_vs_person.csv  filtered_6_yoy_change.csv  filtered_7_status_breakdown.csv  filtered_8_location_type.csv  filtered_9a_shootings.csv  filtered_9b_hate_crimes.csv
src/gta_crime_data/: main.py
src/gta_crime_data/analyze/: analyze.py
src/gta_crime_data/extract/: all.py  download_durham.py  download_halton.py  download_york.py  durham.py  halton.py  peel.py  toronto.py  york.py
src/gta_crime_data/transform/: deduplicate_incidents.py  filter_invalid_incidents.py  pipeline.py  unify_datasets.py
src/gta_crime_data/visualize/: kepler_map.py
src/gta_urban_analytics/: main.py  schemas.py
src/gta_urban_analytics/analyze/: analyze.py
src/gta_urban_analytics/extract/: all.py  durham.py  halton.py  peel.py  toronto.py  york.py
src/gta_urban_analytics/transform/: build_standalone_compact.py  partition_by_year.py  pipeline.py
src/gta_urban_analytics/visualize/: build.py  kepler_map.py  kepler_standalone_map.html
tests/: conftest.py  test_unify_datasets.py
visualize-kepler-map/: .env.example  .gitignore  .yarnrc.yml  README.md  esbuild.config.mjs  package.json
visualize-kepler-map/public/: index.html
visualize-kepler-map/src/: app.tsx
visualize-kepler-map/src/components/: RadiusControl.tsx
vizualize-kepler-map/: README.md  esbuild.config.mjs  package.json  tsconfig.json
vizualize-kepler-map/scripts/: build-standalone.mjs
vizualize-kepler-map/src/: store.ts
vizualize-kepler-map/src/layers/: index.ts  (+1 more)
(+20 files in other folders)
