[project]
name = "gta-crime-data-analysis"
version = "0.1.0"
description = "Data acquisition and analysis pipeline for Greater Toronto Area (GTA) crime data."
authors = [
    { name = "Matt Woodley" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyproj>=3.7.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
download = "gta_crime_data.extract.all:download"
unify = "gta_crime_data.main:unify"
analyze = "gta_crime_data.main:analyze"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gta_crime_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
